--- a/2018/HookFrameWorkYouHua/app/src/main/res/values/strings.xml
+++ b/2018/HookFrameWorkYouHua/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">HookFrameWork</string>
+    <string name="app_name">HookFrameWorkYouHua</string>
 </resources>
